<resources>
    <string name="app_name">DrollCyclopedia</string>

    <!-- TODO: Remove or change this placeholder BaseData -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choicenessFragment">精选</string>
    <string name="crosstalkFragment">段子</string>
    <string name="discoverFragmnet">发现</string>
    <string name="railleryFragmnet">逗趣专栏</string>
    <string name="videoFragmnet">视频</string>
</resources>
